src/ariel-os-macros/tests/ui/config/conflicting_config_kind.stderr
error: custom attribute panicked
 --> tests/ui/config/conflicting_config_kind.rs:9:1
  |
9 | #[ariel_os::config(network, usb)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: only one configuration is supported at a time, use a separate function for `usb` configuration
